--- a/bigbluebutton-client/src/org/bigbluebutton/modules/present/views/SlideView.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/modules/present/views/SlideView.mxml
@@ -25,7 +25,7 @@
 	xmlns:local="*"
     width="100%" height="100%" 
     paddingBottom="5" 
-    creationComplete="onCreationComplete();Alert.show('BigBlueButton-0.72 2011-3-01 07:58PM Build-45');" verticalScrollPolicy="off" horizontalScrollPolicy="off"      
+    creationComplete="onCreationComplete();Alert.show('BigBlueButton-0.72 2011-3-15 4:15 Build-46');" verticalScrollPolicy="off" horizontalScrollPolicy="off"      
     rollOut="hideCursor()"
     xmlns:views="org.bigbluebutton.modules.present.views.*"
     implements="org.bigbluebutton.common.IBbbCanvas" backgroundColor="#225D94" resize="resizeHandler()">
