--- a/bigbluebutton-client/src/org/bigbluebutton/modules/phone/views/components/ToolbarButton.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/modules/phone/views/components/ToolbarButton.mxml
@@ -23,17 +23,21 @@
 <mx:Button xmlns:mx="http://www.adobe.com/2006/mxml"
 	icon="{phoneIcon}" click="startPhone()"
 	xmlns:mate="http://mate.asfusion.com/"
-  toolTip="{ResourceUtil.getInstance().getString('bbb.toolbar.phone.toolTip')}">
-
-<-- Frank temporary comment out toolTip="{ResourceUtil.getInstance().getString('bbb.toolbar.phone.toolTip')}+'_Test3'">
--->	
+	toolTip="{ResourceUtil.getInstance().getString('bbb.toolbar.phone.toolTip')}">
+	
 	<mate:Listener type="{CallConnectedEvent.CALL_CONNECTED_EVENT}" method="handleCallConnectedEvent"/>
 	<mate:Listener type="{CallDisconnectedEvent.CALL_DISCONNECTED_EVENT}" method="handleCallDisconnectedEvent"/>
 	<mate:Listener type="{BBBEvent.JOIN_VOICE_CONFERENCE}" method="handleBBBJoinConferenceEvent"/>
 	
+	<mate:Listener type="{cPHONE_ConfigSipPhoneEvent.UPDATE_CONFIG}" method="handleConfigWebPhone"/>
+	
 	<mx:Script>
 		<![CDATA[
 			import com.asfusion.mate.events.Dispatcher;
+			
+			import mx.controls.Alert;
+			import mx.events.CloseEvent;
+			import mx.managers.PopUpManager;
 			
 			import org.bigbluebutton.common.LogUtil;
 			import org.bigbluebutton.main.events.BBBEvent;
@@ -41,8 +45,15 @@
 			import org.bigbluebutton.modules.phone.events.CallDisconnectedEvent;
 			import org.bigbluebutton.modules.phone.events.JoinVoiceConferenceEvent;
 			import org.bigbluebutton.modules.phone.events.LeaveVoiceConferenceEvent;
+			import org.bigbluebutton.modules.phone.events.cPHONE_ConfigSipPhoneEvent;
 			import org.bigbluebutton.modules.phone.views.assets.Images;
 			import org.bigbluebutton.util.i18n.ResourceUtil;
+			
+			//import org.bigbluebutton.modules.phone.views.components.SipSelectingWindow;
+			//<REALWAT>
+			//private var selectionWindow:SipSelectingWindow;
+			private var _isUseSipApplet:Boolean = true;
+			//</REALWAT>
 			
 			private var images:Images = new Images();
 			private var dispatcher:Dispatcher = new Dispatcher();
@@ -69,15 +80,50 @@
 			 ******************************************************************************/
 			private function startPhone():void {
 				//this.enabled = false;
+				
 				if (this.selected) {
-					LogUtil.debug("Display voice conference information");
-					dispatcher.dispatchEvent(new JoinVoiceConferenceEvent());
+					//<REALWAT>
+					
+					/*selectionWindow = PopUpManager.createPopUp(
+						this, SipSelectingWindow , false) as SipSelectingWindow;
+					selectionWindow.centerWindow();
+					selectionWindow.addEventListener(CloseEvent.CLOSE,function(evt:CloseEvent):void{
+						removeSelectSipwindow(new cPHONE_ConfigSipPhoneEvent(cPHONE_ConfigSipPhoneEvent.CLOSE_POP_UP));
+					}
+					);*/
+					if(false == this._isUseSipApplet){
+						LogUtil.debug("Starting flash sip phone");
+						var joinVoiceEvent:JoinVoiceConferenceEvent = new JoinVoiceConferenceEvent();
+						dispatcher.dispatchEvent(joinVoiceEvent);
+					}else{
+						LogUtil.debug("Starting applet sip phone");
+						var joinVoiceBySipAppletEvent:cPHONE_ConfigSipPhoneEvent = new cPHONE_ConfigSipPhoneEvent(
+							cPHONE_ConfigSipPhoneEvent.JOIN_VIOCE_BY_SIP_APPLET);
+						dispatcher.dispatchEvent(joinVoiceBySipAppletEvent);
+					}
+					//</REALWAT>
+					//dispatcher.dispatchEvent(new JoinVoiceConferenceEvent());
 				} else {
 
 					LogUtil.debug("Leaving voice conference");
 					dispatcher.dispatchEvent(new LeaveVoiceConferenceEvent());
 				}
+				this.enabled = false;
+				var t:Timer = new Timer(3000, 1);
+				t.addEventListener(TimerEvent.TIMER, onTimer);
+				t.start();
 			}/** END Function: startPhone */
+			
+			//<REALWAT>
+			/*private function removeSelectSipwindow(evet:cPHONE_ConfigSipPhoneEvent) : void {
+				LogUtil.debug("removePopup");
+				PopUpManager.removePopUp(selectionWindow);
+			}*/
+			
+			private function handleConfigWebPhone(e:cPHONE_ConfigSipPhoneEvent) : void {
+				this._isUseSipApplet = e._isAppletConf;
+			}
+			//</REALWAT>
 			
 			private function onTimer(e:TimerEvent):void{
 				this.enabled = true;
